--- a/random_projects/_science_llm/science_llm.ipynb
+++ b/random_projects/_science_llm/science_llm.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "#   Initialize the Paper that you like\n",
-    "loader = TextLoader(\"C:/Users/V. Stasiunaitis/Desktop/Projects/Data Science/Data Science. Projects/___FAISS_to_optimize/publication.txt\")\n",
+    "loader = TextLoader(\"[location].txt\")\n",
     "documents = loader.load()\n",
     "\n",
     "#   Splitting the Document\n",
