--- a/random_projects/_science_llm/uploading_data.ipynb
+++ b/random_projects/_science_llm/uploading_data.ipynb
@@ -10,7 +10,7 @@
     "nest_asyncio.apply()\n",
     "\n",
     "import os\n",
-    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-6O9LbMZWsw9Xv5wJAQ7U2tkoLtOlcfUQDxFlt1n3iBuYES15\"\n"
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"[API-KEY]"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "from llama_parse import LlamaParse\n",
     "\n",
-    "document = LlamaParse(result_type=\"markdown\").load_data(file_path=\"C:/Users/V. Stasiunaitis/Desktop/RI_BIO_publication.pdf\")"
+    "document = LlamaParse(result_type=\"markdown\").load_data(file_path=\"[location].txt")"
    ]
   },
   {
